<resources>
    <string name="app_name">PlaneVadeGame</string>
    <string name="bscs_project">\@bscs_project</string>
    <string name="ghostpoltergeist">\@ghostpoltergeist</string>
    <string name="planevade">PlaneVade</string>
    <string name="start">start</string>
    <string name="about">about</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="back">back</string>
    <string name="to_move">TO MOVE</string>
    <string name="game_over">GAME OVER!</string>
    <string name="restart">Restart</string>
    <string name="back_btn">Back</string>
    <string name="read">JetPlane Invasion is an action-packed arcade game where players take on the role of a skilled pilot</string>
    <string name="g_dev_harold_2023">g.dev/harold@2023</string>
    <string name="github_com_ghostpoltergeist">github.com/Ghostpoltergeist</string>
    <string name="dev_to_haroldedsel">Dev.To/HaroldEdsel</string>
    <string name="mit_license_2023">MIT License @ 2023</string>
    <string name="thank_you">thank you!!</string>
    <string name="shoot">𐀏</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="high_score">High Score:</string>
    <string name="high">high Score</string>
    <string name="points">0</string>
    <string name="best_score">Best Score:</string>
    <string name="_bestpoinbts">best score</string>
    <string name="developer_harold_edsel_cabaluna_ghostpoltergeist">Developer: Harold Edsel Cabaluna (GhostPoltergeist)</string>
    <string name="email_edselcabaluna21_gmail_com">Email: EdselCabaluna21@gmail.com</string>
    <string name="github_www_github_com_ghostpoltergeist">GitHub: www.github.com/GhostPoltergeist</string>
    <string name="facebook_owjis_instagram_ghostpoltergeist">Facebook: /OwJis || Instagram: @GhostPoltergeist</string>
    <string name="feedback_feedback_planevadeapp">Feedback: feedback@planevadeapp</string>
    <string name="phone_63_92_846_10012">Phone: +63-92-846-10012</string>
    <string name="meet_the_dev">Meet The Dev</string>
    <string name="support_support_planevadeapp">Support: support@planevadeapp</string>
</resources>